# sqloquent

./: .gitignore  AGENTS.md  async_interfaces.md  asyncql_dox.md  changelog.md  code_style.md  dox.md  how_to_couple.md  interfaces.md  license  migrations.md  pyproject.toml  readme.md  requirements.txt  tools.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  release_checklist.md
docs/: async_interfaces.md  asyncql_dox.md  dox.md  how_to_couple.md  interfaces.md  tools.md
misc/: documentation-commands.md  doxit.sh
simplesqlorm/: __init__.py  classes.py  errors.py  interfaces.py  migration.py  relations.py
sqloquent/: SKILL.md  __init__.py  classes.py  errors.py  interfaces.py  migration.py  relations.py  tools.py  version.py
sqloquent/async/: __init__.py  interfaces.py
sqloquent/asyncio/: __init__.py  classes.py  interfaces.py
sqloquent/asyncql/: __init__.py  classes.py  interfaces.py  relations.py
sqloquent/sqlcipher/: __init__.py  classes.py  context.py
tests/: context.py  test_async_classes.py  test_async_integration.py  test_async_relations.py  test_classes.py  test_integration.py  test_migration.py  test_regressions.py  test_relations.py  test_sqlcipher_classes.py  test_sqlcipher_integration.py  test_tools.py
tests/integration_vectors/: Account.py  AccountType.py  Correspondence.py  Entry.py  EntryType.py  Identity.py  Ledger.py  Transaction.py  asyncmodels2.py  cipher_models2.py  models2.py
tests/integration_vectors/asyncmodels/: Account.py  Correspondence.py  Entry.py  Identity.py  Ledger.py  Transaction.py  __init__.py
tests/integration_vectors/models/: Entry.py  (+6 more)
(+6 files in other folders)
