[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqloquent"
version = "0.0.1"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = ""
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "packify >= 0.2.1",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/sqloquent"
"Bug Tracker" = "https://github.com/k98kurz/sqloquent/issues"

[project.scripts]
sqloquent = "sqloquent.tools:run_cli"
