[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqloquent"
version = "0.4.0"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = ""
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Database :: Front-Ends",
]
dependencies = [
  "packify >= 0.2.2",
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/sqloquent"
"Bug Tracker" = "https://github.com/k98kurz/sqloquent/issues"

[project.scripts]
sqloquent = "sqloquent.tools:run_cli"

[project.optional-dependencies]
asyncql = [
  "aiosqlite >= 0.19.0",
]